create supplier form

--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -4,7 +4,7 @@
 {% block container %}
 <div class="form-body">
     <div class="website-logo">
-        <a href="{% url 'authentication:login' %}">
+        <a href="{% url 'core:authentication:login' %}">
             <div class="logo">
                 <img class="logo-size" src="i{% static 'mages/logo-light.svg' %}" alt="">
             </div>
