--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CHIME</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>::eBazar:: Dashboard </title>
+        <title>::CHIME:: Dashboard </title>
         <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Favicon-->
 
         <!-- plugin css file  -->
@@ -181,8 +181,7 @@
                                 <div
                                     class="dropdown user-profile ml-2 ml-sm-3 d-flex align-items-center zindex-popover">
                                     <div class="u-info me-2">
-                                        <p class="mb-0 text-end line-height-sm "><span class="font-weight-bold">John
-                                                Quinn</span></p>
+                                        <p class="mb-0 text-end line-height-sm "><span class="font-weight-bold">{{ user.username }}</span></p>
                                         <small>Admin Profile</small>
                                     </div>
                                     <a class="nav-link dropdown-toggle pulse p-0" href="#" role="button"
@@ -215,9 +214,12 @@
                                                 <a href="order-invoices.html"
                                                     class="list-group-item list-group-item-action border-0 "><i
                                                         class="icofont-file-text fs-5 me-3"></i>Order Invoices</a>
-                                                <a href="ui-elements/auth-signin.html"
-                                                    class="list-group-item list-group-item-action border-0 "><i
-                                                        class="icofont-logout fs-5 me-3"></i>Signout</a>
+                                                <form action="{% url 'core:authentication:logout' %}" method="post">
+                                                    {% csrf_token %}
+                                                    <button type="submit" class="list-group-item list-group-item-action border-0 "><i
+                                                            class="icofont-logout fs-5 me-3"></i>Signout
+                                                    </button>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
