--- a/core/templates/core/includes/sidebar.html
+++ b/core/templates/core/includes/sidebar.html
@@ -4,24 +4,24 @@
             <span class="logo-icon">
                 <i class="bi bi-bag-check-fill fs-4"></i>
             </span>
-            <span class="logo-text">eBazar</span>
+            <span class="logo-text">CHIME</span>
         </a>
         <!-- Menu: main ul -->
         <ul class="menu-list flex-grow-1 mt-3">
             <li><a class="m-link active" href="{% url 'core:dashboard' %}"><i class="icofont-home fs-5"></i>
                     <span>Dashboard</span></a>
             </li>
-            <li class="collapsed">
+            <!-- Menu: Sub menu ul -->
+            <!-- <li class="collapsed">
                 <a class="m-link" data-bs-toggle="collapse" data-bs-target="#menu-order" href="#">
                     <i class="icofont-notepad fs-5"></i> <span>Orders</span> <span
                         class="arrow icofont-rounded-down ms-auto text-end fs-5"></span></a>
-                <!-- Menu: Sub menu ul -->
                 <ul class="sub-menu collapse" id="menu-order">
                     <li><a class="ms-link" href="order-list.html">Orders List</a></li>
                     <li><a class="ms-link" href="order-details.html">Order Details</a></li>
                     <li><a class="ms-link" href="order-invoices.html">Order Invoices</a></li>
                 </ul>
-            </li>
+            </li> -->
             <li class="collapsed">
                 <a class="m-link" data-bs-toggle="collapse" data-bs-target="#menu-inventory" href="#">
                     <i class="icofont-chart-histogram fs-5"></i> <span>Inventory</span> <span
@@ -29,10 +29,10 @@
                 <!-- Menu: Sub menu ul -->
                 <ul class="sub-menu collapse" id="menu-inventory">
                     <li><a class="ms-link" href="{% url 'core:inventory:product_list' %}">Stock List</a></li>
-                    <li><a class="ms-link" href="purchase.html">Purchase</a></li>
+                    <li><a class="ms-link" href="{% url 'core:inventory:sale_list' %}">Sale</a></li>
                     <li><a class="ms-link" href="{% url 'core:inventory:supplier_list' %}">Supplier</a></li>
-                    <li><a class="ms-link" href="returns.html">Returns</a></li>
-                    <li><a class="ms-link" href="department.html">Department</a></li>
+                    <!-- <li><a class="ms-link" href="returns.html">Returns</a></li>
+                    <li><a class="ms-link" href="department.html">Department</a></li> -->
                 </ul>
             </li>
         </ul>
