--- a/inventory/templates/inventory/product_list.html
+++ b/inventory/templates/inventory/product_list.html
@@ -7,6 +7,11 @@
                 <div
                     class="card-header py-3 no-bg bg-transparent d-flex align-items-center px-0 justify-content-between border-bottom flex-wrap">
                     <h3 class="fw-bold mb-0">Stock Inventory List</h3>
+                    <div class="col-auto d-flex w-sm-100">
+                        <a href="{% url 'core:inventory:product_create' %}">
+                            <button type="button" class="btn btn-primary btn-set-task w-sm-100" data-bs-toggle="modal" data-bs-target="#expadd"><i class="icofont-plus-circle me-2 fs-6"></i>Add Product</button>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div> <!-- Row end  -->
@@ -40,10 +45,10 @@
                                     <td>
                                         {% if item.quantity > item.min_low_threshold_quantity %}
                                             <span class="badge bg-success">Available</span>
-                                        {% elif item.quantity <= item.min_low_threshold_quantity %}
-                                            <span class="badge bg-warning">Low</span>
                                         {% elif item.quantity == 0 %}
                                             <span class="badge bg-danger">Out of stock</span>
+                                        {% elif item.quantity <= item.min_low_threshold_quantity %}
+                                            <span class="badge bg-warning">Low</span>
                                         {% endif %}
                                     </td>
                                 </tr>
