--- a/inventory/templates/inventory/supplier_form.html
+++ b/inventory/templates/inventory/supplier_form.html
@@ -1,10 +1,19 @@
 {% extends 'core/base.html' %}
 {% block container %}
+
+{% for error in form.errors %}
+{% if error %}
+<!-- TODO: display proper error message -->
+<div role="alert" class="alert alert-danger">{{ error }} - {{ error.get }}</div>
+{% endif %}
+{% endfor %}
+
+
+
 <div class="body d-flex py-3">
     <div class="container-xxl">
         <div class="row align-items-center">
             <div class="border-0 mb-4">
-                <div
                     class="card-header py-3 no-bg bg-transparent d-flex align-items-center px-0 justify-content-between border-bottom flex-wrap">
                     <h3 class="fw-bold mb-0">Add Supplier</h3>
                 </div>
@@ -18,27 +27,28 @@
                         <h6 class="mb-0 fw-bold ">Business Data</h6>
                     </div>
                     <div class="card-body">
-                        <form>
+                        <form method="post" action="{% url 'core:inventory:supplier_create' %}">
+                            {% csrf_token %}
                             <div class="row g-3 align-items-center">
                                 <div class="col-md-6">
                                     <label for="firstname" class="form-label">Name</label>
-                                    <input type="text" class="form-control" id="name" name="name" required>
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Paul Wood" required>
                                 </div>
                                 <div class="col-md-6">
                                     <label for="lastname" class="form-label">Item</label>
-                                    <input type="text" class="form-control" id="item" name="item" required>
+                                    <input type="text" class="form-control" id="item" name="item" placeholder="Plastic" required>
                                 </div>
                                 <div class="col-md-6">
                                     <label class="form-label">Phone Number</label>
-                                    <input type="text" class="form-control" id="phone" name="phone" required>
+                                    <input type="text" class="form-control" id="phone" placeholder="+23908889303" name="phone" required>
                                 </div>
                                 <div class="col-md-6">
                                     <label for="emailaddress" class="form-label">Email Address</label>
-                                    <input type="email" class="form-control" id="email" name="email" required>
+                                    <input type="email" class="form-control" id="email" name="email" placeholder="example@emai.com" required>
                                 </div>
                                 <div class="col-md-6">
                                     <label for="emailaddress" class="form-label">Address</label>
-                                    <input type="text" class="form-control" id="address" name="address" required>
+                                    <input type="text" class="form-control" id="address" name="address" placeholder="No 20 Colin Street" required>
                                 </div>
                                 <div class="col-md-6">
                                     <label for="emailaddress" class="form-label">Tax Number</label>
