--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -197,9 +197,9 @@
                                                     <img class="avatar rounded-circle"
                                                         src="{% static 'images/profile_av.svg' %}" alt="profile">
                                                     <div class="flex-fill ms-3">
-                                                        <p class="mb-0"><span class="font-weight-bold">John Quinn</span>
+                                                        <p class="mb-0"><span class="font-weight-bold">{{ user.username }}</span>
                                                         </p>
-                                                        <small class="">Johnquinn@gmail.com</small>
+                                                        <small class="">{{ user.email }}</small>
                                                     </div>
                                                 </div>
 
@@ -208,12 +208,12 @@
                                                 </div>
                                             </div>
                                             <div class="list-group m-2 ">
-                                                <a href="admin-profile.html"
+                                                <!-- <a href="admin-profile.html"
                                                     class="list-group-item list-group-item-action border-0 "><i
                                                         class="icofont-ui-user fs-5 me-3"></i>Profile Page</a>
                                                 <a href="order-invoices.html"
                                                     class="list-group-item list-group-item-action border-0 "><i
-                                                        class="icofont-file-text fs-5 me-3"></i>Order Invoices</a>
+                                                        class="icofont-file-text fs-5 me-3"></i>Order Invoices</a> -->
                                                 <form action="{% url 'core:authentication:logout' %}" method="post">
                                                     {% csrf_token %}
                                                     <button type="submit" class="list-group-item list-group-item-action border-0 "><i
