--- a/inventory/templates/inventory/supplier_form.html
+++ b/inventory/templates/inventory/supplier_form.html
@@ -1,12 +1,14 @@
 {% extends 'core/base.html' %}
 {% block container %}
 
-{% for error in form.errors %}
-{% if error %}
-<!-- TODO: display proper error message -->
-<div role="alert" class="alert alert-danger">{{ error }} - {{ error.get }}</div>
+
+{% if form.errors %}
+    {% for field in form %}
+        {% for error in field.errors %}
+        <div role="alert" class="alert alert-danger">{{ field.label }} - {{ error }}</div>
+        {% endfor %}
+    {% endfor %}
 {% endif %}
-{% endfor %}
 
 
 
@@ -14,7 +16,6 @@
     <div class="container-xxl">
         <div class="row align-items-center">
             <div class="border-0 mb-4">
-                    class="card-header py-3 no-bg bg-transparent d-flex align-items-center px-0 justify-content-between border-bottom flex-wrap">
                     <h3 class="fw-bold mb-0">Add Supplier</h3>
                 </div>
             </div>
@@ -27,33 +28,15 @@
                         <h6 class="mb-0 fw-bold ">Business Data</h6>
                     </div>
                     <div class="card-body">
-                        <form method="post" action="{% url 'core:inventory:supplier_create' %}">
+                        <form method="post">
                             {% csrf_token %}
                             <div class="row g-3 align-items-center">
+                                {% for field in form %}
                                 <div class="col-md-6">
-                                    <label for="firstname" class="form-label">Name</label>
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Paul Wood" required>
+                                    <label for="firstname" class="form-label">{{ field.label }}</label>
+                                    {{ field }}
                                 </div>
-                                <div class="col-md-6">
-                                    <label for="lastname" class="form-label">Item</label>
-                                    <input type="text" class="form-control" id="item" name="item" placeholder="Plastic" required>
-                                </div>
-                                <div class="col-md-6">
-                                    <label class="form-label">Phone Number</label>
-                                    <input type="text" class="form-control" id="phone" placeholder="+23908889303" name="phone" required>
-                                </div>
-                                <div class="col-md-6">
-                                    <label for="emailaddress" class="form-label">Email Address</label>
-                                    <input type="email" class="form-control" id="email" name="email" placeholder="example@emai.com" required>
-                                </div>
-                                <div class="col-md-6">
-                                    <label for="emailaddress" class="form-label">Address</label>
-                                    <input type="text" class="form-control" id="address" name="address" placeholder="No 20 Colin Street" required>
-                                </div>
-                                <div class="col-md-6">
-                                    <label for="emailaddress" class="form-label">Tax Number</label>
-                                    <input type="text" class="form-control" id="tax_number" name="tax_number" required>
-                                </div>
+                                {% endfor %}
                             </div>
 
                             <button type="submit" class="btn btn-primary mt-4">Submit</button>
